Bug 1294616 - Somewhat improve the string performance by defining string literals whose length is known at compile time. r=cpearce

MozReview-Commit-ID: LAlqMDtGQN7